# dailywriter

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: urls.py
daily_writer_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
daily_writer_app/migrations/: 0001_initial.py  0002_entry_author.py
daily_writer_app/templates/daily_writer_app/: base.html  edit_entry.html  index.html  new_entry.html
daily_writer_app/templates/registration/: login.html  sign_up.html
dailywriter/: asgi.py  settings.py  urls.py  wsgi.py
